package com.hailo-platform/H2O.service.config.changelog;

import 'github.com/hailo-platform/H2O/config-service/proto/common.proto';

message Request {
    // specify an ID to filter the change log
    optional string id = 4;
	// specify a time range to search between
	optional int64 rangeStart = 1;
	optional int64 rangeEnd = 2;
	// paginate
	optional string lastId = 3;
}

message Response {
	repeated com.hailo-platform/H2O.service.config.Change changes = 1;
	optional string last = 2;
}
